# python-movie-list

./: .gitignore  README.md  config.example.py  docker-compose.yml  pyproject.toml
my_app/: __init__.py
my_app/controllers/: auth.py  database.py  databaseSchema.sql  movies.py  users.py
my_app/templates/: base.html
my_app/templates/auth/: login.html  register.html
my_app/templates/movies/: movies.html  myPlaylist.html
my_app/util/: jwt_util.py
